--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,8 +85,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .light-btn:hover {
-  background: #0d6efd;
-  border: 1px solid #0d6efd; 
+  background: #1d57ae;
+  border: 1px solid #0e3f89ae; 
   color: #fff;
 }
 
@@ -139,6 +139,29 @@ h1, h2, h3, h4, h5, h6 {
   padding: 2rem 0;
 }
 
+.primary-bg {
+  background-color: #0d6efd;
+  color: white;
+}
+
+.secondary-bg {
+  background-color: #29176e26;
+}
+
+.primary-bg .number {
+  font-weight: 950;
+  font-size: 90px;
+  color: white;
+}
+
+.warning-bg {
+  background-color: #ffc107;
+}
+.danger-bg{
+  background-color:#b1233d;
+  color: white;
+}
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
@@ -167,6 +190,15 @@ h1, h2, h3, h4, h5, h6 {
 .back-to-top.active {
   visibility: visible;
   opacity: 1;
+}
+
+.bi-chevron-compact-down{
+  font-size: 4rem;
+  color: #ffffff;
+  font-weight: 500;
+}
+.bi-chevron-compact-down:hover{
+  color: #313030;
 }
  /*--------------------------------------------------------------
 # Card for communication arts
@@ -524,14 +556,11 @@ section {
   overflow: hidden;
 }
 
-.section-bg {
-  background-color: #29176e26;
-    background-color: #29176e26;
-}
 .section-title {
   padding-bottom: 35px;
   padding-top: 0;
 }
+
 /*--------------------------------------------------------------
 # Breadcrumbs
 --------------------------------------------------------------*/
@@ -562,11 +591,6 @@ section {
   padding-right: 10px;
   color: #635551;
   content: "/";
-}
-.trophy img {
-  width: 600px;
-  height: 600px;
-
 }
 
 /*--------------------------------------------------------------
@@ -655,14 +679,6 @@ section {
 .what-we-offer .content p {
   margin-bottom: 30px;
 }
-/* .what-we-offer .icon-box {
-  text-align: center;
-  border-radius: 10px;
-  background: #fff;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-  padding: 40px 30px;
-  width: 100%;
-} */
 .what-we-offer .icon-box img {
   width: 100%;
   margin-bottom: 15px;
@@ -774,20 +790,6 @@ section {
     opacity: 0;
   }
 }
-
-
-.counter {
-  background-color: #0d6efd;
-}
-.counter .number {
-  font-weight: 950;
-  font-size: 90px;
-  color: white;
-}
-.counter .title {
-  color: white;
-}
-
 
 .testimonials {
   padding: 80px 0;
@@ -1178,9 +1180,6 @@ section {
 /*--------------------------------------------------------------
 # Communication Arts
 --------------------------------------------------------------*/
-.intro-bg {
-  background-color: #ffc107;
-}
 .portfolio {
   padding-top: 20px;
 }
@@ -1272,10 +1271,6 @@ section {
 /*--------------------------------------------------------------
 # Competitive Debate Programs
 --------------------------------------------------------------*/
-.competitive-bg{
-  background-color:#b1233d;
-  color: white;
-}
 .teach-us-debate {
   background: url("../img/portfolio/p-23.jpg") center center no-repeat;
   background-size: cover;
@@ -1302,15 +1297,6 @@ section {
 /*--------------------------------------------------------------
 # Academic Enrichment
 --------------------------------------------------------------*/
-.academic-bg {
-  background-color:#3666f2;
-  color: white;
-}
-
-.early-bg{
-  background-color:#3666f2;
-  color: white;
-}
 
 /*--------------------------------------------------------------
 # Classical Music Program
@@ -1350,39 +1336,18 @@ section {
 /*--------------------------------------------------------------
 # McGraw Hill Education Courses Programs
 --------------------------------------------------------------*/
-.academic-enrichment h4 {
-  border-left: 5px solid #29176e;
-  padding-left: 10px;
+.redbird-program .mcgrawhill-img {
+  width: 70%;
+  height: 425px;
 }
-.mcGraw-hill-education h4 {
-  border-left: 5px solid #29176e;
-  padding-left: 10px;
-}
-.redbird-mathematics h4 {
-  border-left: 5px solid #29176e;
-  padding-left: 10px;
-}
-.redbird-mathematics .list {
-  color: white;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-bottom: 1px;
-  border-radius: 3px;
-}
-.redbird-language h4 {
-  border-left: 5px solid #29176e;
-  padding-left: 10px;
-}
-.assesment-and-learning h4 {
-  border-left: 5px solid #29176e;
-  padding-left: 10px;
-}
-.academic-enrichment .icon-boxes .icon-box {
-  border-radius: 10px;
-  background: #fff;
-  box-shadow: 0px 5px 15px rgb(0 0 0/ 10%);
-  padding: 25px 30px;
-  width: 100%;
+
+.why-it-works .circle-container {
+  background-color: white;
+  border-radius: 50%;
+  display: inline-block;
+  color: #0d6efd;
+  width: 30%;
+  padding: 5%;
 }
 
 /*--------------------------------------------------------------
