--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,7 +161,15 @@ h1, h2, h3, h4, h5, h6 {
   background-color:#b1233d;
   color: white;
 }
-
+.white-bg
+{
+  background-color: white;
+}
+.white-bg ul {
+  list-style-type: disc !important;
+  padding-left: 1em !important;
+  margin-left: 1em;
+}
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
