--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,12 +164,13 @@ h1, h2, h3, h4, h5, h6 {
 .white-bg
 {
   background-color: white;
+  padding: 2.5rem 1.5rem;
 }
-.white-bg ul {
+/* .white-bg ul {
   list-style-type: disc !important;
   padding-left: 1em !important;
   margin-left: 1em;
-}
+} */
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
@@ -1748,7 +1749,7 @@ section {
 }
 
 @media screen and (max-width: 320px) {
-  .navbar a, .navbar a {
+  .navbar a, .navbar a .primary-btn {
     font-size: 12px;
     padding: 8px 0 15px 19px;
   }
