moy updates: - image compression - remove admission counselling - update pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,7 +180,7 @@ h1, h2, h3, h4, h5, h6 {
 .bi-chevron-compact-down:hover{
   color: #313030;
 }
- /*--------------------------------------------------------------
+/*--------------------------------------------------------------
 # Card for communication arts
 --------------------------------------------------------------*/
 @media (min-width: 768px) {
@@ -536,9 +536,6 @@ section {
 /*--------------------------------------------------------------
 # Breadcrumbs
 --------------------------------------------------------------*/
-/* .breadcrumbs {
-  padding-top: 15px;
-} */
 .breadcrumbs {
   background: #f4f2f2;
 }
@@ -951,7 +948,7 @@ section {
 /*--------------------------------------------------------------
 # Admission Counselling
 --------------------------------------------------------------*/
-.our-counselling-services .circle-container {
+.our-counselling-services .circle-container, .your-exams-content .circle-container {
   background-color: white;
   border-radius: 50%;
   width: 75%;
@@ -983,6 +980,7 @@ section {
   background: #fff;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
   margin: 25px 0px;
+  width: 100%;
 }
 .ourCourses .title {
   font-weight: 700;
@@ -1001,6 +999,7 @@ section {
 .why-take-exam-content {
   padding: 8%;
 }
+
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
@@ -1082,6 +1081,7 @@ section {
 .section-container .certificate-container .ap-img {
   width: 160%;
 }
+
 /*--------------------------------------------------------------
 # Classical Music Program
 --------------------------------------------------------------*/
@@ -1231,10 +1231,18 @@ section {
   padding: 15px;
 }
 
+
+/* 
+=================================================================================
+=================================================================================
+
+MEDIA SCREEN 
+
+=================================================================================
+================================================================================= 
+*/
+
 @media screen and (max-width: 2560px) {
-  /*--------------------------------------------------------------
-  # General
-  --------------------------------------------------------------*/
   .title-size {
     display: flex;
     flex-direction: column;
@@ -1271,9 +1279,6 @@ section {
 }
 
 @media screen and (max-width: 1440px) {
-  /*--------------------------------------------------------------
-  # General
-  --------------------------------------------------------------*/
   .register-btn {
     margin-left: 2%;
   }
@@ -1292,9 +1297,6 @@ section {
 }
 
 @media screen and (max-width: 1024px) {
-    /*--------------------------------------------------------------
-    # General
-    --------------------------------------------------------------*/
   .py-5 {
     padding-right: 2rem!important;
     padding-left: 2rem!important;
